- Version 0.5.0:
  - Redesign the lib project structure.
  - Some packages updates.
  - Microsoft Word Document new features:
	- addText now have 2 new options: superscript and subscript (fixed issue #299).
- Version 0.4.8:
  - Upgraded jszip to the last version.
  - Some packages updates.
  - xmlbuilder 11.0.1 migration.
  - Start cleaning the documentation.
  - Remove missing sourcemap url (Merge pull request #295 from pdesantis/master).
  - Update docxtable.js.
- Version 0.4.7:
  - Merge pull request #278 from aug2uag/master.
  - Merge pull request #255 from OmniCyberSecurity/master.
  - Merge pull request #262 from bkylerussell/indent.
  - Small fixed for the README.md.
  - Updated the supported node.js versions.
  - Merge pull request #270 from markau/markau-docxJSON-fixes.
  - Fix to example JSON key name, Fix to lib to ensure createListOfNumber.
  - Merge pull request #266 from pdesantis/master.
  - Merge pull request #259 from textioHQ/custom-style-support.
  - Add strikethrough option to docx addText function.
  - Account for paragraphs without specified options.
  - Round cx and cy values for images.
  - Merge pull request #249 from flaviolacer/patch-1.
  - Working Grid Width.
  - Merge pull request #238 from danishcake/missing_require_path.
  - Fix missing require('path').
  - Merge pull request #228 from msenevir/docs-set-slide-size-option.
  - update docs.
  - Merge pull request #227 from bainweb/master.
  - Remove unnecessary margin above tables.
  - Merge pull request #225 from salzhrani/rtl (RTL support).
- Version 0.4.6:
  - Fixed issue with createByJson - Merge pull request #209 from goyney/master
- Version 0.4.5:
	- Added dot bullets.
	- Option to append text to the content object of a slide based on the "text and content" layout.
	- Bug: Fix creating invalid pptx files when using styles.
	- Bug: Create invalid empty <cols> in excel files.
	- Bug: pptx addText ( null ) crashing officegen.