@@ -1151,10 +1151,10 @@ function makePptx(genobj, new_type, options, gen_private, type_info) {
         slideElementA += ' type="' + data.slide.layoutName + '"'
       } // Endif.
 
-      slideElementA += '" preserve="1"'
+      slideElementA += ' preserve="1"'
 
       if (!data.slide.officeType) {
-        slideElementA += '" userDrawn="1"'
+        slideElementA += ' userDrawn="1"'
       } // Endif.
     } // Endif.
 
