@@ -150,7 +150,8 @@ MakeLayoutPlugin.prototype.extendPptxApi = function(docObj) {
           return 1
         },
         layoutName: layoutName,
-        back: options.back
+        back: options.back,
+        name: options.display || layoutName
       },
       data: options.data || []
     }
