@@ -108,6 +108,12 @@ function createColorElements(color_info, back_info) {
 
     switch (fillType) {
       case 'solid':
+        if (color_info.scheme) {
+          outText +=
+            '<a:solidFill><a:schemeClr val="' + colorVal + '"/></a:solidFill>'
+          break
+        } // Endif.
+
         outText +=
           '<a:solidFill><a:srgbClr val="' +
           colorVal +
