@@ -1,8 +1,11 @@
 - Version 0.5.0:
-  - Redesign the lib project structure.
-  - Some packages updates.
   - Microsoft Word Document new features:
 	- addText now have 2 new options: superscript and subscript (fixed issue #299).
+  - Microsoft PowerPoint Document new features:
+    - Custom layouts support.
+    - Allow to insert direct xml code to a slide.
+  - Redesign the lib directory structure.
+  - Some packages updates.
 - Version 0.4.8:
   - Upgraded jszip to the last version.
   - Some packages updates.
